# advent-of-python-2024

./: Makefile  README.md  pyproject.toml
advent2024/: __main__.py
advent2024/d01/: __init__.py
